Cleaned up empty choice list code

--- a/leaflet/templates/leaflet/map_chooser_widget.html
+++ b/leaflet/templates/leaflet/map_chooser_widget.html
@@ -75,7 +75,12 @@
             };
             
             //Init procedures
-            var features = JSON.parse('{{ geofeatures|safe }}');
+            var features;
+            
+            {% if geofeatures %}
+            features = JSON.parse('{{ geofeatures|safe }}');
+            {% endif %}
+
             var countryLayer = L.geoJson(features,{
                 style: {
                     "color": gray,
