Map zooms to selected country's bounds

--- a/leaflet/templates/leaflet/map_chooser_widget.html
+++ b/leaflet/templates/leaflet/map_chooser_widget.html
@@ -61,7 +61,7 @@
                         unhighlight(selectedFeature);
                         selectedFeature = ev.target;
                         selected = [id];
-                        // map.fitBounds(feature.getBounds());
+                        map.fitBounds(selectedFeature.getBounds());
                     }
                     highlight(ev.target);
                 }
