Fixed bug when chosen doesn't have form's initial vals

--- a/leaflet/templates/leaflet/map_chooser_widget.html
+++ b/leaflet/templates/leaflet/map_chooser_widget.html
@@ -91,6 +91,8 @@
                     "fillColor": yellow,
                 });
                 selected.push(id);
+                input.value = selected;
+                $("#map-chosen").val(selected).trigger("chosen:updated");
             };
     
             var handleSelect = function(ev) {
